--- a/1-Abstract_Object_in_Image.ipynb
+++ b/1-Abstract_Object_in_Image.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###########获取文件路径、文件名、后缀名############\n",
+    "\n",
     "def get_filename(filename):\n",
     "  (filepath,tempfilename) = os.path.split(filename);\n",
     "  (shotname,extension) = os.path.splitext(tempfilename);\n",
@@ -65,12 +65,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 字符串时间转换为计算机存储时间\n",
+    "\n",
     "def Normaltime1(datetime1):\n",
     "    Normaltime = datetime.strptime(datetime1,'%Y-%m-%d %H_%M')\n",
     "    return Normaltime\n",
     "\n",
-    "# datetime时间转为字符串\n",
+    "\n",
     "def Changestr(datetime1):\n",
     "    str1 = datetime1.strftime('%Y-%m-%d %H:%M')\n",
     "    return str1"
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path=pathlib.Path('D:\\\\人工智能产品\\\\AM-天空识别预测模型\\\\Stack Length\\\\')"
+    "path=pathlib.Path('C:\\Users\\Administrator\\Documents\\GitHub\\Data_Plume_Shape_and_Particle_Concentration')"
    ]
   },
   {
@@ -175,8 +175,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IN_PATH = 'D:\\人工智能产品\\AM-天空识别预测模型\\Stack Length'\n",
-    "OUT_PATH = 'D:\\人工智能产品\\AM-天空识别预测模型\\Stack Length'\n",
+    "IN_PATH = 'C:\\Users\\Administrator\\Documents\\GitHub\\Data_Plume_Shape_and_Particle_Concentration\\json'\n",
+    "OUT_PATH = 'C:\\Users\\Administrator\\Documents\\GitHub\\Data_Plume_Shape_and_Particle_Concentration\\jason2txt'\n",
     "file_list = glob(IN_PATH + '/*.json')"
    ]
   },
@@ -197,12 +197,10 @@
     "for i in range(len(file_list)):\n",
     "    with open(file_list[i]) as f:\n",
     "        label_str = f.read()\n",
-    "        label_dict = json.loads(label_str)  # json文件读入dict\n",
+    "        label_dict = json.loads(label_str)  \n",
     "\n",
-    "        # 输出 txt 文件的路径\n",
     "        out_file = OUT_PATH + '/' + custombasename(file_list[i]) + '.txt'\n",
     "\n",
-    "        # 写入 poly 点坐标 和 label\n",
     "        fout = open(out_file, 'w')\n",
     "        out_str = ''\n",
     "        for shape_dict in label_dict['shapes']:\n",
