--- a/2-Calculate_Plume_Area_Length.ipynb
+++ b/2-Calculate_Plume_Area_Length.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path=pathlib.Path('D:\\\\人工智能产品\\\\AM-天空识别预测模型\\\\Stack Length\\\\')\n",
+    "path=pathlib.Path('C:\\Users\\Administrator\\Documents\\GitHub\\Data_Plume_Shape_and_Particle_Concentration\\Stack Length')\n",
     "fp=list(path.glob('**/2019*.txt'))"
    ]
   },
